# aoj-client

./: Cargo.toml  README.md
examples/: show_solution.rs
resource/: solutions.json  users.json
resource/solutions/problems/: 2852.json
resource/users/: ichyo.json
src/: lib.rs  solution.rs  user.rs
