[package]
name = "aoj-client"
version = "0.1.0"
authors = ["ichyo <ichyo00@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.14"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
url = "1.7.2"
failure = "0.1.5"

[dev-dependencies]
mockito = "0.17.0"
